Update build script to include npm install

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "scripts": {
+ "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "build":"npm run build --prefix frontend/my-app"
+    "build":"npm install && npm install --prefix frontend/my-app &&  npm run build --prefix frontend/my-app"
   },
   "keywords": [],
   "author": "",
