--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
  "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "build":"npm install && npm install --prefix frontend/my-app &&  npm run build --prefix frontend/my-app"
-  },
+    "build": "npm install --prefix frontend/my-app && npm run build --prefix frontend/my-app" 
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
